--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
                 <a href="project1/gallery.html">Gallery</a>
             </div>
         </li>
-        <li><a href="project2/project2.html" class="disabled-link">Project 2</a></li>
-        <li><a href="project3/project3.html" class="disabled-link">Project 3</a></li>
+        <li><a href="project2/project2.html">Project 2</a></li>
+        <li class="dropdown1">
+            <a href="project3/project3.html" class="dropbtn">Project 3</a>
+            <div class="dropdown_content">
+                <a href="project3/preprocessing.html">Preprocessing</a>
+            </div>
+        </li>
         <li><a href="project4/project4.html" class="disabled-link">Project 4</a></li>
     </ul>
 
@@ -29,8 +34,8 @@
 
     <ul class="indexlist">
         <li><a href="project1/project1.html">Project 1</a></li>
-        <li><a href="#" class="disabled-link">Project 2 <span class="coming-soon">(Coming Soon)</span></a></li>
-        <li><a href="#" class="disabled-link">Project 3 <span class="coming-soon">(Coming Soon)</span></a></li>
+        <li><a href="project2/project2.html">Project 2</a></li>
+        <li><a href="project3/project3.html">Project 3</a></li>
         <li><a href="#" class="disabled-link">Project 4 <span class="coming-soon">(Coming Soon)</span></a></li>
     </ul>
 </body>
