--- a/project1/project1.html
+++ b/project1/project1.html
@@ -20,13 +20,18 @@
                 <a href="gallery.html">Gallery</a>
             </div>
         </li>
-        <li><a href="project2/project2.html" class="disabled-link">Project 2</a></li>
-        <li><a href="project3/project3.html" class="disabled-link">Project 3</a></li>
+        <li><a href="../project2/project2.html">Project 2</a></li>
+        <li class="dropdown1">
+            <a href="../project3/project3.html" class="dropbtn">Project 3</a>
+            <div class="dropdown_content">
+                <a href="../project3/preprocessing.html">Preprocessing</a>
+            </div>
+        </li>
         <li><a href="project4/project4.html" class="disabled-link">Project 4</a></li>
     </ul>
 
     <h2 class="header2">How Search Engines Work</h2>
-    <p class="fourelementspara">
+    <p class="headertwoparagraph">
         Search engines operate through three main steps: crawling, indexing, and serving.
         Crawling is the process where search engines use web crawlers (also known as spiders or bots) to explore websites and gather data.
         Indexing involves analyzing the gathered data and storing it in a database, known as the search index.
@@ -34,13 +39,13 @@
     </p>
 
     <h2 class="header2">Four Elements of Writing Relevant Content Links</h2>
-    <p class="fourelementspara">
+    <p class="headertwoparagraph">
         Writing relevant content links involves the following four elements: relevance, intellectual appeal, sensory stimulation, and emotional resonance.
         To make your content relevant, it must assist the user in some way, whether by helping them resolve an issue, answering a question, providing useful information, or addressing their immediate needs.
     </p>
 
     <h2 class="header2">Good Heading Hierarchy</h2>
-    <p class="fourelementspara">
+    <p class="headertwoparagraph">
         A good heading hierarchy organizes content logically and helps users navigate a page easily. Readers tend to associate larger headings with greater importance.
         There are six heading levels: H1 is the most important and largest, while H6 is the least important and smallest.
     </p>
